# TinyRecursiveModels

./: .buildkit.env  .buildkitconfig.toml  .env.development  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .trivyignore.example  APPLIED_OPTIMIZATIONS_V2.md  ARAÇ_KULLANIM_TEST_RAPORU.md  BUILDKIT_QUICKSTART.md  CI_CD_SETUP.md  COMPREHENSIVE_TEST_RESULTS.md  CRITICAL_FIXES_REPORT.md  DEPLOYMENT.md  EMAIL_CLASSIFICATION_README.md  FINAL_ANALYSIS_AND_OPTIMIZATIONS.md  FINAL_CHECKLIST.md  FINAL_FIXES_CHECKLIST.md  FINAL_SOLUTION_REPORT.md  FINAL_TRAINING_SUMMARY.md  FUTURE_IMPROVEMENTS_COMPLETED.md  GRADIENT_FLOW_FIX.md  IMPROVEMENT_SUMMARY.md  INTEGRATION_COMPLETE.md  MODEL_COMPARISON.md  Makefile  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.txt  OPTIMIZATION_V3_AGGRESSIVE.md  PERFORMANCE_TESTING.md  PRD.md  QUICK_START.md  QUICK_START_V2.md  README.md  README_gmail_dataset.md  RL_TOOL_USAGE_README.md  SDV_DOSYA_YAPISI.md  SDV_KULLANIM_KILAVUZU.md  SDV_README.md  (+97 more)
backend/: .env.example  Dockerfile  Dockerfile.secrets-example  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  TRENDYOL_SCRAPING_README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  security.py  tracing.py
backend/app/middleware/: __init__.py  error_handler.py  https_redirect.py  rate_limiter.py  response_cache.py  session.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  alert_service.py  cache_service.py  model_inference.py  monitoring_service.py  reasoning_service.py  tool_orchestration.py  trendyol_api.py  trendyol_api_old.py  trendyol_scraping_service.py
backend/tests/: conftest.py  test_trendyol_scraping.py  test_trendyol_scraping_comprehensive.py
backend/tests/integration/: test_docker_setup.py  test_monitoring.py  (+2 more)
k8s/: hpa.yaml  (+9 more)
(+625 files in other folders)
